[project]
name = "rukus-icx-ansible"

description = "dependencies for developing/fixing ruckus icx modules"
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.12,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "3.0.0"
package-mode = false

[dependency-groups]
dev = [
    "ansible (>=13.2.0,<14.0.0)",
    "commitizen (>=4.11.0,<5.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ansible-lint (>=25.12.2,<26.0.0)",
    "pytest-ansible (>=25.12.0,<26.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true


[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
omit = [
    "tests/*"
]

[tool.pytest.ini_options]
addopts = "--cov=plugins --cov-report html"

[tool.coverage.report]
show_missing = true
